fixed broken layout for schema start

--- a/src/apps/schema/src/app/main.less
+++ b/src/apps/schema/src/app/main.less
@@ -4,6 +4,10 @@
   height: calc(100vh - 54px);
   overflow: hidden;
 
+  &.SchemaStart {
+    grid: initial;
+  }
+
   .SchemaMain {
     box-shadow: 0 0 15px #0b0d13;
     height: calc(100vh - 54px);
